force-app/main/default/objects/test_object__c/fields/Account_test__c.field-meta.xml
<CustomField>
    <fullName>Account_test__c</fullName>
    <label>Account test</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>test objects</relationshipLabel>
    <relationshipName>test_objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>