force-app/main/default/objects/test_object__c/fields/picklist_v1__c.field-meta.xml
<CustomField>
    <fullName>picklist_v1__c</fullName>
    <label>picklist v1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
            </value>
            <value>
                <fullName>two</fullName>
            </value>
            <value>
                <fullName>three</fullName>
            </value>
            <value>
                <fullName>four</fullName>
            </value>
            <value>
                <fullName>five</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>