force-app/main/default/objects/test_object__c/fields/test_field_1__c.field-meta.xml
<CustomField>
    <fullName>test_field_1__c</fullName>
    <label>test field 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>